2001-04-26  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Don't use KRB5_CHECK_PROTOS.

2001-04-02  Tom Yu  <tlyu@mit.edu>

	* login.M: Don't include "= 0" as part of the "accept_passwd"
	config option. [pullup from 1.2.2]

2001-03-12  Ezra Peisach  <epeisach@mit.edu>

	* defines.h: Add prototypes for rcmd_stream_init_normal(),
	rcmd_stream_init_krb4(), strsave() and rd_and_store_for_creds()

	* Makefile.in: Add dependency of forward.o on defines.h

	* forward.c: Include defines.h for prototypes.

	* kcmd.c, krcp.c, krlogin.c, krlogind.c, krsh.c: Provide full prototype
	for local functions and move include of kerberosIV/krb.h before
	defines.h.

2001-01-26  Tom Yu  <tlyu@mit.edu>

	* krshd.c: Get path for NOLOGIN file from paths.h if present,
	mirroring logic in login.c.  [patch from David MacKenzie
	krb5-appl/913]

2001-01-23  Tom Yu  <tlyu@mit.edu>

	* forward.c (rd_and_store_for_creds): Overwrite any existing value
	of the KRB5CCNAME environment variable.

2001-01-16  Ken Raeburn  <raeburn@mit.edu>

	* krcp.c (error): Always declare with ellipsis.

2001-01-13  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Force SunOS to not use termios.

2001-01-12  Sam Hartman  <hartmans@mit.edu>

	* krlogin.c: Previously, we only used TIOCGLTC  on systems with
	termios.  This is sort of silly since its a BSD 4.[23] IOCTL.  We
	then go out of our way not to use it on IRIX, Solaris or HPUX.  I
	think all this comes about because you really want to use BSD
	IOCTLS on Sunos rather than termios.  I propose to do that and
	never use BSD IOCTLs on Sunos.


2000-12-15  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (main): Add new "-4" option, to use krb4
	authentication only; useful for testing.
	* rlogin.M: Updated.

2000-12-06  Ken Raeburn  <raeburn@mit.edu>

	* krlogind.c (doit): Cast first argument to pty_make_sane_hostname
	to sockaddr pointer.
	* krshd.c (doit): Likewise.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Update to autoconf 2 macro names: