@@ -47,7 +47,8 @@ extern void rcmd_stream_init_normal(void);
 #if defined(KRB5_KRB4_COMPAT) && !defined(SKIP_V4_PROTO)
 extern void rcmd_stream_init_krb4(C_Block, int, int, int);
 
-extern int k4cmd(int *sock, char **ahost, u_short rport, char *locuser, 
+extern int k4cmd(int *sock, char **ahost, unsigned int rport,
+		 char *locuser,
 		 char *remuser, char *cmd, int *fd2p, KTEXT ticket,
 		 char *service, char *realm, CREDENTIALS *cred, 
 		 Key_schedule schedule, MSG_DAT *msg_data, 
